@@ -27,6 +27,7 @@ LIST_LINES=11;
 LIST_LINESPACE=16;
 LIST_MAX_CHARS=40;
 LIST_COLOR_SELECTED=FFFFFF;
+LIST_COLOR_PLAYING=AAFF22;
 LIST_COLOR_NOT_SELECTED=66FFFF;
 SONGTITLE_XY=113,14;
 SONGTITLE_WIDTH=236;
